--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     nav {
       background-color: #444;
       padding: 10px;
-      text-align: center;
+      text-align: left;
     }
     nav ul {
       list-style: none;
@@ -34,6 +34,7 @@
     nav li {
       display: inline-block;
       margin-right: 20px;
+      border: 1px whitesmoke;
     }
     nav a {
       color: #fff;
@@ -75,6 +76,10 @@
     .section h2 {
       margin-top: 0;
     }
+    li{
+      background: grey;
+      border-radius: 3px;
+    }
   </style>
 </head>
 <body>
@@ -85,10 +90,9 @@
   <nav>
     <ul>
       <li><a href="Home.html">Home</a></li>
-      <li><a href="pictures.html">Pictures</a></li>
+    
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="notes.html">View Notes</a></li>
-      <li><a href="codes.html">Codes</a></li>
+     
       <li><a href="questions.html">Questions</a></li>
     </ul>
   </nav>
@@ -106,9 +110,9 @@
     <div class="section">
       <h2>Our Services</h2>
       <ul>
-        <li>Notes and study materials for BCA students</li>
-        <li>Codes and programming resources</li>
-        <li>Questions and answers for practice</li>
+        <li class="service">Notes and study materials for BCA students</li>
+        <li class="service">Codes and programming resources</li>
+        <li class="servic ">Questions and answers for practice</li>
       </ul>
     </div>
   </main>
