--- a/Question12.html
+++ b/Question12.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Question-12, Assignment</h1>
-    <button> <a href="index.html"> Home Page</a> </button>
+    <button> <a href="Home.html"> Home Page</a> </button>
     <hr>
     <br>
     <table border="1px solid black"
@@ -41,7 +41,10 @@
             <td>Mobile Number</td>
              <td><input type="number" style="width: 80px;"></td>
         </tr>
-
+        <tr>
+            <td>Address</td>
+            <td><textarea name="" id="" cols="15" rows="3"></textarea></td>
+        </tr>
         <tr>
             <td>State</td>
             <td>
