--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <ul>
       <li><a href="Home.html">Home</a></li>
     
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Notes</a></li>
      
       <li><a href="questions.html">Questions</a></li>
     </ul>
@@ -117,7 +117,7 @@
     </div>
   </main>
   <footer>
-    <p>&copy; 2023 MauryaTechno Field</p>
+    <p>&copy; 2025 MauryaTechno Field</p>
   </footer>
    <script src="main.js"></script>
 </body>
