--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <ul>
       <li><a href="Home.html">Home</a></li>
     
-      <li><a href="contact.html">Notes</a></li>
+      <li><a href="Notes.html">Notes</a></li>
      
       <li><a href="questions.html">Questions</a></li>
     </ul>
