--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Home Page</title>
   <Style>
+  *{
+    margin: 0;
+    padding: 0;
+    
+  }
     h1 { 
          text-align: center;
          color: brown;
@@ -112,9 +117,10 @@
   </div>
   <hr size="4px" />
    <nav>
-    <select name="home" id="home">
-      <option value="Home">Home</option>
-    </select></nav>
+     <ul>
+       <li><a href="index.html">Main Menu</a></li>
+     </ul>
+   </nav>
   
   <marquee behavior="tight" direction="Left">BCA 1<sup>st</sup> Semester</marquee>
  
